Angular template and templateOutlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,18 +30,19 @@
                 <a routerLink="employee-detail" class="nav-link">Employees</a>
             </li>  
             <li class="nav-item">
-                <a routerLink="exampleForkjoin" class="nav-link">ForkJoin Examples</a>
+                <a routerLink="exampleForkjoin" class="nav-link">ForkJoin</a>
             </li> 
             <li class="nav-item">
                 <a routerLink="Bank-Details" class="nav-link">Bank Detail</a>
             </li>
-             <li class="nav-item">
-                <a routerLink="exampleDOMRender" class="nav-link">DOM Render Example</a>
+            <li>
+                <a routerLink="exampleDOMRender" class="nav-link">DOM</a>
+            </li>
+            <li>
+                <a routerLink="template" class="nav-link">Template</a>
             </li>
         </div>
     </nav>
-
 </div>
-
 <router-outlet></router-outlet>
 
