--- a/src/app/bank-details/bankdetail-container/bankdetail-presentation/bankdetail-presentation.component.html
+++ b/src/app/bank-details/bankdetail-container/bankdetail-presentation/bankdetail-presentation.component.html
@@ -1,128 +1,128 @@
-<h4 align="center"><b><u>Bank Detail Form</u></b></h4>
 <br>
-<div align="center">
-<form class="form-control" [formGroup]= "accountFormGroup">
-    <div class="form-group row">
-        <div class="col-md-4" align="left">
-            <b><label class="col-md-6 control-label">Account Number:</label></b>
-            <input type="text" class="form-control" formControlName ="account_no">
-                <span *ngIf="(accountFormGroup.controls.account_no.touched || accountFormGroup.controls.account_no.dirty || isSubmitted)
-                && accountFormGroup.controls.account_no.errors?.required">
-                Please enter Account Number</span>
-                <span *ngIf="accountFormGroup.controls.account_no.touched && accountFormGroup.controls.account_no.errors?.pattern">
-                Please enter character and number only
-               </span>
-                <span *ngIf="accountFormGroup.controls.account_no.touched && accountFormGroup.controls['account_no'].hasError('minlength')">
-                    Account number length should be in between (5-15)
-                </span>
-                <span *ngIf="accountFormGroup.controls.account_no.touched && accountFormGroup.controls['account_no'].hasError('maxlength')">
-                    Account number length should be in between (5-15)
-                </span>
-        </div>
-        <div class="col-md-4" align="left">
-            <b><label class="col-md-6 control-label">Account Holder Name:</label></b>
-            <input type="text" class="form-control" formControlName="account_name">
-            <span *ngIf="(accountFormGroup.controls.account_name.touched || accountFormGroup.controls.account_name.dirty || isSubmitted)
-            && accountFormGroup.controls.account_name.errors?.required">
-           Please enter Account Holder Name</span>
-           <span *ngIf="accountFormGroup.controls.account_name.touched && accountFormGroup.controls.account_name.errors?.pattern">
-            Please enter character only</span>
-            <br>
-        </div>
-    
-    </div>
-    <div class="form-group row">
-        <div class="col-md-4" align="left">
-            <b><label class="col-md-6 control-label">Email Id:</label></b>
-            <input type="text" class="form-control" formControlName="email_id" >
-            <span *ngIf="(accountFormGroup.controls.email_id.touched || accountFormGroup.controls.email_id.dirty || isSubmitted)
-                && accountFormGroup.controls.account_no.errors?.required">
-                Please enter appropriate Email id</span>
-           <span *ngIf="accountFormGroup.controls.email_id.touched && accountFormGroup.controls.email_id.errors?.email">
-               Please enter valid  Email id</span>
-        </div>
+<fieldset>
+    <legend>Bank Detail Form</legend>
+    <form class="form-control" [formGroup]= "accountFormGroup">
+            <div class="form-group row">
+                <div class="col-md-4" align="left">
+                    <b><label class="col-md-6 control-label">Account Number:</label></b>
+                    <input type="text" class="form-control" formControlName ="account_no">
+                        <span *ngIf="(accountFormGroup.controls.account_no.touched || accountFormGroup.controls.account_no.dirty || isSubmitted)
+                        && accountFormGroup.controls.account_no.errors?.required">
+                        Please enter Account Number</span>
+                        <span *ngIf="accountFormGroup.controls.account_no.touched && accountFormGroup.controls.account_no.errors?.pattern">
+                        Please enter character and number only
+                    </span>
+                        <span *ngIf="accountFormGroup.controls.account_no.touched && accountFormGroup.controls['account_no'].hasError('minlength')">
+                            Account number length should be in between (5-15)
+                        </span>
+                        <span *ngIf="accountFormGroup.controls.account_no.touched && accountFormGroup.controls['account_no'].hasError('maxlength')">
+                            Account number length should be in between (5-15)
+                        </span>
+                </div>
+                <div class="col-md-4" align="left">
+                    <b><label class="col-md-6 control-label">Account Holder Name:</label></b>
+                    <input type="text" class="form-control" formControlName="account_name">
+                    <span *ngIf="(accountFormGroup.controls.account_name.touched || accountFormGroup.controls.account_name.dirty || isSubmitted)
+                    && accountFormGroup.controls.account_name.errors?.required">
+                Please enter Account Holder Name</span>
+                <span *ngIf="accountFormGroup.controls.account_name.touched && accountFormGroup.controls.account_name.errors?.pattern">
+                    Please enter character only</span>
+                    <br>
+                </div>
+            
+            </div>
+            <div class="form-group row">
+                <div class="col-md-4" align="left">
+                    <b><label class="col-md-6 control-label">Email Id:</label></b>
+                    <input type="text" class="form-control" formControlName="email_id" >
+                    <span *ngIf="(accountFormGroup.controls.email_id.touched || accountFormGroup.controls.email_id.dirty || isSubmitted)
+                        && accountFormGroup.controls.account_no.errors?.required">
+                        Please enter appropriate Email id</span>
+                <span *ngIf="accountFormGroup.controls.email_id.touched && accountFormGroup.controls.email_id.errors?.email">
+                    Please enter valid  Email id</span>
+                </div>
 
-        <div class="col-md-4" align="left">
-            <b><label class="col-md-6 control-label">Phone Number:</label></b>
-            <input type="text" class="form-control" formControlName="phone_no"  >Masking:{{numberMasking(number)}}
-            <span *ngIf="accountFormGroup.controls.phone_no.touched && accountFormGroup.controls.phone_no.errors?.pattern">
-                Please enter number only
-               </span>
-            <span *ngIf="(accountFormGroup.controls.phone_no.touched || accountFormGroup.controls.phone_no.dirty || isSubmitted)
-            && accountFormGroup.controls.account_no.errors?.required">
-                Please enter only number</span>
-            <span *ngIf="accountFormGroup.controls.phone_no.touched && accountFormGroup.controls['phone_no'].hasError('maxlength')">
-                Phone number should be 10 digit only </span>
-          
-            <br>
-        </div>
-    </div>
+                <div class="col-md-4" align="left">
+                    <b><label class="col-md-6 control-label">Phone Number:</label></b>
+                    <input type="text" class="form-control"  id="phone-number" formControlName="phone_no" appPhoneMask>
 
-    <div class="form-group row">
-        <div class="col-md-4" align="left">
-             <b><label class="col-md-6 control-label">Bank Name:</label></b>
-            <select class="form-control" formControlName="bank_name">
-                <option>--------Select Bank------</option>
-                <option>HDFC</option>
-                <option>BOB</option>
-                <option>SBI</option>
-                <option>ICICI</option>
+                    <span *ngIf="(accountFormGroup.controls.phone_no.touched || accountFormGroup.controls.phone_no.dirty || isSubmitted)
+                    && accountFormGroup.controls['phone_no'].hasError('maxlength')">
+                        Please enter only number</span>
+                    <span *ngIf="accountFormGroup.controls.phone_no.touched && accountFormGroup.controls['phone_no'].hasError('maxlength')">
+                        Phone number should be 10 digit only </span>
                 
-            </select>
-            <span *ngIf="accountFormGroup.controls.bank_name.touched">
-                Please select the bank
-            </span>
-        </div>
-        <div class="col-md-4" align="left">
-            <b> <label class="col-md-6 control-label">Gender:</label></b>
-            <br>
-            <input type="radio" name="gender"  value="male" formControlName="gender" >Male
-            <span></span>
-            <input type="radio" name="gender"  value="female" formControlName="gender">Female
-            <br>
-        </div>
-        <div class="form-group row">
-            <div class="col-md-4" align="left">
-                <br>
-                <b> <label class="col-md-6 control-label">Address:</label></b>
-                <textarea class="form-control" formControlName="address"></textarea>
-                <span *ngIf="(accountFormGroup.controls.address.touched || accountFormGroup.controls.address.dirty || isSubmitted)
-                && accountFormGroup.controls.address.errors?.required">
-                Please enter address </span>
+                    <br>
+                </div>
             </div>
-            <div class="col-md-4" align="left">
-                <br>
-                <b><label class="col-md-6 control-label">Basic Amount:</label></b>
-                <input type="text" class="form-control" formControlName="basic_amt" >
-                <span *ngIf="(accountFormGroup.controls.basic_amt.touched || accountFormGroup.controls.basic_amt.dirty || isSubmitted)
-                && accountFormGroup.controls.basic_amt.errors?.required">
-                Please enter number only</span>
-                <br>
+
+            <div class="form-group row">
+                <div class="col-md-4" align="left">
+                    <b><label class="col-md-6 control-label">Bank Name:</label></b>
+                    <select class="form-control" formControlName="bank_name">
+                        <option>--------Select Bank------</option>
+                        <option>HDFC</option>
+                        <option>BOB</option>
+                        <option>SBI</option>
+                        <option>ICICI</option>
+                        
+                    </select>
+                    <span *ngIf="accountFormGroup.controls.bank_name.touched">
+                        Please select the bank
+                    </span>
+                </div>
+                <div class="col-md-4" align="left">
+                    <b> <label class="col-md-6 control-label">Gender:</label></b>
+                    <br>
+                    <input type="radio" name="gender"  value="male" formControlName="gender" >Male
+                    <span></span>
+                    <input type="radio" name="gender"  value="female" formControlName="gender">Female
+                    <br>
+                </div>
+                <div class="form-group row">
+                    <div class="col-md-4" align="left">
+                        <br>
+                        <b> <label class="col-md-6 control-label">Address:</label></b>
+                        <textarea class="form-control" formControlName="address"></textarea>
+                        <span *ngIf="(accountFormGroup.controls.address.touched || accountFormGroup.controls.address.dirty || isSubmitted)
+                        && accountFormGroup.controls.address.errors?.required">
+                        Please enter address </span>
+                    </div>
+                    <div class="col-md-4" align="left">
+                        <br>
+                        <b><label class="col-md-6 control-label">Basic Amount:</label></b>
+                        <input type="text" class="form-control" formControlName="basic_amt" >
+                        <span *ngIf="(accountFormGroup.controls.basic_amt.touched || accountFormGroup.controls.basic_amt.dirty || isSubmitted)
+                        && accountFormGroup.controls.basic_amt.errors?.required">
+                        Please enter number only</span>
+                        <br>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-md-4" align="left">
+                    <b><label class="col-md-6 control-label">Currency:</label></b>
+                    <select class="form-control" formControlName="currency">
+                        <option>--------Select currency------</option>
+                        <option>USD</option>
+                        <option>INR</option>
+                        <option>EUR</option>
+                        <option>CAD</option>
+                    </select>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-md-4" align="left">
-            <b><label class="col-md-6 control-label">Currency:</label></b>
-            <select class="form-control" formControlName="currency">
-                <option>--------Select currency------</option>
-                <option>USD</option>
-                <option>INR</option>
-                <option>EURO</option>
-                <option>CAD</option>
-            </select>
+            <div class="form-group row">
+                <div class="col-md-4" align="left">
+                    <br>
+                    <button style="margin:5px;" class="btn btn-primary" type="submit" (click)="btnSave($event)">Save</button>
+                    <button style="margin:5px;" class="btn btn-danger" (click)="btnReset()">Reset</button>
+                    <button style="margin:5px;" class="btn btn-success" (click)="btnListBankDetail()">List</button>
+                    <br>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="form-group row">
-        <div class="col-md-4" align="left">
-            <br>
-            <button style="margin:5px;" class="btn btn-primary" type="submit" (click)="btnSave($event)">Save</button>
-            <button style="margin:5px;" class="btn btn-danger" (click)="btnReset()">Reset</button>
-            <button style="margin:5px;" class="btn btn-success" (click)="btnListBankDetail()">List</button>
-            <br>
-        </div>
-    </div>
-</form>
+    </form>
+    
+</fieldset>
 <div class="form-group row">
     <div class="col-md-4" align="left">
         <input  #input type="text"  class="form-control" name = "account_name" placeholder="Search..."
@@ -147,7 +147,7 @@
         <th>Currency</th>
     </thead>
     <tbody>
-        <tr *ngFor= "let row of accountbankDetail | accountNameFilter:account_nameSearch">
+        <tr *ngFor= "let row of accountbankDetail | accountNameFilter:account_nameSearch ">
             <td>{{row.id}}</td>
             <td>{{row.account_no}}</td>
             <td>{{row.account_name}}</td>
@@ -156,17 +156,8 @@
             <td>{{row.bank_name}}</td>
             <td>{{row.gender}}</td>
             <td>{{row.address}}</td>
-            <td>{{row.basic_amt}}</td>
-            <!-- <td *ngIf = "row.gender == 'female' else elseBlock">
-                <ng-container>
-                {{ row.basic_amt * 0.2}} 
-                </ng-container>
-            </td> -->
-                <!-- <ng-template #elseBlock>
-                    <span *ngIf = "row.gender == 'male'"></span>
-                    {{row.basic_amt }}
-                </ng-template> -->     
-           
+            <td>{{row.basic_amt | currency:row.currency }}</td>
+            <!-- <td>{{row.basic_amt | currency:'row.currency':'symbol':'4.2-2':'fr' }}</td> -->           
             <td>{{row.currency}}</td>
             <td>
                 <button style="margin:5px;" class="btn btn-success" (click)="getBankDetailById(row.id)">Edit</button>
@@ -175,6 +166,5 @@
         </tr>
     </tbody>
 </table>
-</div>
 
-<!-- ngClass="let item = {{row.gender}} == 'female'? {{row.basic_amt}}*0.20': {{row.basic_amt}}" -->
+
