--- a/src/app/example-domrender/example-domrender.component.html
+++ b/src/app/example-domrender/example-domrender.component.html
@@ -4,7 +4,7 @@
 </div>
 <div>
     <button style="margin:5px;" class="btn btn-success" (click)="onClickAdd()">Element Ref Add</button>
-    <button style="margin:5px;" class="btn btn-danger" (click)="onClickRemove()">Element Ref Add</button>
+    <button style="margin:5px;" class="btn btn-danger" (click)="onClickRemove()">Element Ref Remove</button>
 </div>
 
 
