Use class example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,9 @@
             <li>
                 <a routerLink="template" class="nav-link">Template</a>
             </li>
+            <li>
+                <a routerLink="use-class" class="nav-link">Useclass</a>
+            </li>
         </div>
     </nav>
 </div>
