Use existing, use value example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<h2>Examples</h2>
+<h2 align="center">Examples</h2>
 
 <div>
-    <nav class="navbar navbar-expand navbar-dark  bg-dark">
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
         <a class = "navbar-brand"></a>
         <div class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -43,6 +43,12 @@
             </li>
             <li>
                 <a routerLink="use-class" class="nav-link">Useclass</a>
+            </li>
+            <li>
+                <a routerLink="use-existing" class="nav-link">UseExisting</a>
+            </li>
+            <li>
+                <a routerLink="use-value" class="nav-link">UseValue</a>
             </li>
         </div>
     </nav>
