Use Factory and Dynamic load component example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
     <nav class="navbar navbar-expand navbar-dark bg-dark">
         <a class = "navbar-brand"></a>
         <div class="navbar-nav mr-auto">
+            <li>
+                <a routerLink="use-fatory" class="nav-link">UseFactory</a>
+            </li>
             <li class="nav-item">
                 <a routerLink="customer" class="nav-link">customer</a>
             </li>
@@ -49,6 +52,9 @@
             </li>
             <li>
                 <a routerLink="use-value" class="nav-link">UseValue</a>
+            </li>
+            <li>
+                <a routerLink="ViewContainerRef" class="nav-link">View Container</a>
             </li>
         </div>
     </nav>
