--- a/src/app/use-fatory/use-fatory.component.html
+++ b/src/app/use-fatory/use-fatory.component.html
@@ -1,1 +1,8 @@
 <p>use-fatory works!</p>
+
+<span>-------------</span>
+<div *ngFor="let item of fruitName">
+    {{item.name}}
+
+</div>
+<h3>{{preferredFruit}}</h3>
