Use Factory example

--- a/src/app/use-fatory/use-fatory.component.html
+++ b/src/app/use-fatory/use-fatory.component.html
@@ -1,8 +1,9 @@
 <p>use-fatory works!</p>
 
-<span>-------------</span>
-<div *ngFor="let item of fruitName">
+<!-- <span>-------------</span>
+<div *ngFor= "let item of fruitName">
     {{item.name}}
 
-</div>
-<h3>{{preferredFruit}}</h3>
+</div>-->
+<h3>Preferred Course :</h3>
+<h3>{{preferredFruit}}</h3> 
