--- a/src/app/view-container-ref/profile/profile.component.html
+++ b/src/app/view-container-ref/profile/profile.component.html
@@ -1,2 +1,7 @@
 <p>profile works!</p>
 <ng-template appProfileHost></ng-template>
+
+
+<template #alertContainer></template>
+<button (click)="createComponent('success')">Create success alert</button>
+<button (click)="createComponent('danger')">Create danger alert</button>
