--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
         <a class = "navbar-brand"></a>
         <div class="navbar-nav mr-auto">
             <li>
+                <a routerLink="cdkexample" class="nav-link">CDK</a>
+            </li>
+            <li>
                 <a routerLink="use-fatory" class="nav-link">UseFactory</a>
             </li>
             <li class="nav-item">
